--- a/source/scss/shared/main.scss
+++ b/source/scss/shared/main.scss
@@ -19,12 +19,16 @@
 	height: 350px;
 	padding: 15px 40px;
 	font-size: 18px;
-    font-Family: Arial;
+    font-family: Arial, Helvetica, sans-serif;
     color: white;
 }
 
 .home{
 	background-color: #B26375;
+}
+
+.subscribe{
+  background-color: #C5736B;
 }
 
 .sponsors{
