--- a/public/client/css/compiled/shared.concat.css
+++ b/public/client/css/compiled/shared.concat.css
@@ -1,7 +1,45 @@
+.col-xs-12, .col-sm-12, .col-md-12, .col-lg-12 {
+  padding-left: 0;
+  padding-right: 0; }
+
+.col-xs-8, .col-sm-8, .col-md-8, .col-lg-8 {
+  padding-left: 0;
+  padding-right: 0; }
+
+.col-xs-4, .col-sm-4, .col-md-4, .col-lg-4 {
+  padding-left: 0;
+  padding-right: 0; }
+
+.col-xs-2, .col-sm-12, .col-md-2, .col-lg-2 {
+  padding-left: 0;
+  padding-right: 0; }
+
+/*# sourceMappingURL=bootstrapOverwrite.css.map */
+
 .das {
   background: deeppink; }
 
 /*# sourceMappingURL=testAgain.css.map */
+
+body * {
+  font-size: 14px;
+  font-family: 'Open Sans';
+  font-weight: 400;
+  line-height: 1.5; }
+
+div {
+  font: inherit;
+  padding: 0;
+  border: 0;
+  margin: 0;
+  vertical-align: baseline; }
+
+.row {
+  margin: 0;
+  padding: 0; }
+
+.textCenter {
+  text-align: center; }
 
 .menu li {
   display: inline-block;
@@ -17,24 +55,11 @@
 .logo {
   padding: 25px 150px; }
 
-.panel {
-  height: 350px;
-  padding: 15px 40px;
-  font-size: 18px;
-  font-family: Arial, Helvetica, sans-serif;
-  color: white; }
-
 .home {
   background-color: #B26375; }
 
-.subscribe {
-  background-color: #C5736B; }
-
 .sponsors {
   background-color: #922911; }
-
-.schedule {
-  background-color: #C27C6B; }
 
 .speakers {
   background-color: #DAB2A8; }
@@ -43,6 +68,154 @@
   background-color: #AA4E39; }
 
 /*# sourceMappingURL=main.css.map */
+
+.schedule {
+  border-top: 1px solid #f2f2f2;
+  margin-top: 35px;
+  padding-top: 45px;
+  padding-left: 20px;
+  padding-right: 20px;
+  position: relative;
+  color: #000000; }
+  .schedule h4 {
+    color: #323232;
+    font-size: 50px;
+    font-weight: 700;
+    margin-bottom: 45px; }
+  .schedule .eventTitle {
+    height: 58px;
+    margin-top: 15px;
+    margin-bottom: 15px; }
+    .schedule .eventTitle .textCenter {
+      font-weight: 600; }
+  .schedule .eventBackground {
+    background: #e6e6e6;
+    height: 58px;
+    line-height: 58px;
+    padding: 0;
+    text-transform: uppercase; }
+  .schedule .eventTimeHolder {
+    background: #fff;
+    color: #dc4e51;
+    border: 1px solid #dc4e51;
+    border-right: none;
+    font-size: 15px;
+    height: 58px;
+    line-height: 58px;
+    text-align: center;
+    padding: 0;
+    z-index: 2; }
+    .schedule .eventTimeHolder:before, .schedule .eventTimeHolder:after {
+      left: 100%;
+      top: 50%;
+      border: solid transparent;
+      content: " ";
+      height: 0;
+      width: 0;
+      position: absolute;
+      pointer-events: none; }
+    .schedule .eventTimeHolder:before {
+      border-color: rgba(220, 78, 81, 0);
+      border-left-color: #dc4e51;
+      border-width: 29px;
+      margin-top: -30px;
+      border-left-width: 16px;
+      border-bottom-width: 30px;
+      border-top-width: 30px; }
+    .schedule .eventTimeHolder:after {
+      border-color: rgba(255, 255, 255, 0);
+      border-left-color: #fff;
+      border-width: 28px;
+      margin-top: -28px;
+      border-left-width: 15px; }
+  .schedule .eventLine hr {
+    margin-top: 29px; }
+  .schedule .eventSpeaker .speakerImg {
+    width: 140px;
+    height: 140px;
+    float: left;
+    margin-right: 20px;
+    background-repeat: no-repeat;
+    background-size: contain;
+    border: 1px solid #cccccc; }
+  .schedule .eventSpeaker h5 {
+    color: #323232;
+    margin-bottom: 15px; }
+    .schedule .eventSpeaker h5 span {
+      font-weight: 600; }
+    .schedule .eventSpeaker h5 .compute {
+      color: #777; }
+  .schedule .eventSpeaker p {
+    color: #646464; }
+
+@media only screen and (max-width: 480px) {
+  .eventTitle .textCenter {
+    height: 58px;
+    display: flex;
+    line-height: 1;
+    align-items: center;
+    justify-content: center; } }
+
+/*# sourceMappingURL=schedule.css.map */
+
+.speakers {
+  border-top: 1px solid #f2f2f2;
+  margin-top: 35px;
+  padding-top: 45px;
+  padding-left: 20px;
+  padding-right: 20px;
+  position: relative;
+  color: #000000; }
+  .speakers h4 {
+    color: #323232;
+    font-size: 50px;
+    font-weight: 700;
+    margin-bottom: 45px; }
+  .speakers .speaker1 {
+    width: 300px;
+    height: 300px;
+    background-color: red; }
+
+/*# sourceMappingURL=speakers.css.map */
+
+.subscribe {
+  border-top: 1px solid #f2f2f2;
+  margin-top: 35px;
+  padding-top: 45px;
+  padding-left: 20px;
+  padding-right: 20px;
+  position: relative;
+  color: #000000; }
+  .subscribe h4 {
+    color: #323232;
+    font-size: 50px;
+    font-weight: 700;
+    margin-bottom: 45px; }
+  .subscribe input {
+    width: calc(100% - 30px);
+    margin: 15px;
+    padding: 5px;
+    text-transform: capitalize; }
+  .subscribe .register {
+    display: inline-block;
+    text-align: center;
+    color: #fff;
+    font-size: 14px;
+    padding: 12px 45px;
+    margin: 15px;
+    background: #dc4e51;
+    border: 1px solid #dc4e51;
+    border-radius: 8px;
+    overflow: hidden;
+    outline: none;
+    position: relative;
+    z-index: 1;
+    -webkit-backface-visibility: hidden; }
+    .subscribe .register:hover {
+      background: #ffffff;
+      color: #dc4e51; }
+
+/*# sourceMappingURL=subscribe.css.map */
 
 .test {
   background-color: yellow;
