--- a/source/scss/shared/main.scss
+++ b/source/scss/shared/main.scss
@@ -1,50 +1,58 @@
+body * {
+  font-size: 14px;
+  font-family: 'Open Sans';
+  font-weight: 400;
+  line-height: 1.5;
+}
+
+div {
+  font: inherit;
+  padding: 0;
+  border: 0;
+  margin: 0;
+  vertical-align: baseline;
+}
+
+.row {
+  margin: 0;
+  padding: 0;
+}
+
+.textCenter{
+  text-align: center;
+}
+
 .menu li {
-	display: inline-block;
-    vertical-align: top;
-    zoom: 1;
-    padding: 10px;
+  display: inline-block;
+  vertical-align: top;
+  zoom: 1;
+  padding: 10px;
 }
 
 .header div,
 .header ul {
-	display: inline-block;
-	vertical-align: top;
+  display: inline-block;
+  vertical-align: top;
 }
 
 .logo {
-	padding: 25px 150px;
-}
-
-.panel {
-	height: 350px;
-	padding: 15px 40px;
-	font-size: 18px;
-    font-family: Arial, Helvetica, sans-serif;
-    color: white;
+  padding: 25px 150px;
 }
 
 .home{
 	background-color: #B26375;
 }
 
-.subscribe{
-  background-color: #C5736B;
-}
-
 .sponsors{
-	background-color: #922911;
-}
-
-.schedule{
-	background-color: #C27C6B;
+  background-color: #922911;
 }
 
 .speakers{
-	background-color: #DAB2A8;
+  background-color: #DAB2A8;
 }
 
 .location{
-	background-color: #AA4E39;
+  background-color: #AA4E39;
 }
 
 section {
