Added google maps

--- a/source/scss/shared/main.scss
+++ b/source/scss/shared/main.scss
@@ -13,6 +13,9 @@ div {
   vertical-align: baseline;
 }
 
+b {
+  font-weight: 700!important;
+}
 .row {
   margin: 0;
   padding: 0;
@@ -41,10 +44,6 @@ div {
 
 .speakers{
   background-color: #DAB2A8;
-}
-
-.location{
-  background-color: #AA4E39;
 }
 
 section {
