--- a/source/scss/shared/main.scss
+++ b/source/scss/shared/main.scss
@@ -38,12 +38,32 @@ b {
   vertical-align: top;
 }
 
-.sponsors{
-  background-color: #922911;
+.linkedin {
+  display: inline-block;
+  width: 20px;
+  height: 20px;
+  background: url(../../images/social_media.png) 0 0;
+  margin-bottom: 10px;
+  margin-top: 10px;
+  margin-right: 5px;
 }
 
-.speakers{
-  background-color: #DAB2A8;
+.twitter {
+  display: inline-block;
+  width: 20px;
+  height: 20px;
+  background: url(../../images/social_media.png) 0 0;
+  margin-bottom: 10px;
+  margin-top: 10px;
+}
+
+.website {
+  display: inline-block;
+  width: 20px;
+  height: 20px;
+  background: url(../../images/social_media.png) 0 0;
+  margin-bottom: 10px;
+  margin-top: 10px;
 }
 
 section {
