--- a/public/client/css/compiled/shared.concat.css
+++ b/public/client/css/compiled/shared.concat.css
@@ -70,6 +70,15 @@
     text-align: center;
     font-weight: 700;
     font-size: 35px; }
+  .home p {
+    text-align: center;
+    margin-top: 30px; }
+    .home p .betssonLogo {
+      width: 120px;
+      height: 30px;
+      background: url(../../images/betsson_logo.png);
+      background-repeat: no-repeat;
+      margin-left: 10px; }
 
 /*# sourceMappingURL=header.css.map */
 
@@ -77,6 +86,11 @@
   background-color: #FFF;
   height: 600px;
   margin-bottom: 100px; }
+  .location h4 {
+    color: #323232;
+    font-size: 50px;
+    font-weight: 700;
+    margin-bottom: 45px; }
   .location .map-gic {
     width: 100%;
     height: 550px; }
