--- a/source/scss/components/location.scss
+++ b/source/scss/components/location.scss
@@ -1,8 +1,14 @@
-
 .location{
   background-color: #FFF;
   height: 600px;
   margin-bottom: 100px;
+
+  h4 {
+    color: #323232;
+    font-size: 50px;
+    font-weight: 700;
+    margin-bottom: 45px;
+  }
 
   .map-gic{
     width: 100%;
