--- a/source/scss/components/header.scss
+++ b/source/scss/components/header.scss
@@ -19,11 +19,9 @@
     nav{
       padding-top: 5px;
     }
-
 }
 .menu {
   float: right;
-
 
   a {
     font-size: 16px;
@@ -52,7 +50,7 @@
   margin-top: 70px;
   background-image:url('../../images/home_bg_top.jpg');
   background-size: cover;
-  height: 450px;
+  min-height: 350px;
   color: #FFF;
   background-repeat: no-repeat;
   background-position: center center;
@@ -62,7 +60,9 @@
     margin-top:130px;
     font-weight: 700;
     font-size: 55px;
+    padding-top: 50px;
   }
+
   h3 {
     text-align: center;
     font-weight: 700;
@@ -73,12 +73,11 @@
     text-align: center;
     margin-top: 30px;
 
-    .betssonLogo {
+    .betssonHeader {
       width: 120px;
       height: 30px;
-      background: url(../../images/betsson_logo.png);
-      background-repeat: no-repeat;
       margin-left: 10px;
+      margin-top: -7px;
     }
   }
 }
