--- a/source/scss/components/subscribe.scss
+++ b/source/scss/components/subscribe.scss
@@ -41,6 +41,66 @@
       color: #dc4e51;
     }
   }
+
+  .progressBar {
+    height: 4px;
+    background: #dc4e51;
+    width: 0;
+    display: none;
+    position: absolute;
+    -webkit-transition: width 1s;
+    -moz-transition: width 1s;
+    -ms-transition: width 1s;
+    transition: width 1s;
+  }
+
+  .progressBar {
+    height: 4px;
+    background: #dc4e51;
+    width: 0;
+    display: none;
+    -webkit-transition: width 0.5s ease;
+    -moz-transition: width 0.5s ease;
+    -ms-transition: width 0.5s ease;
+    transition: width 0.5s ease;
+  }
+  .confirmation {
+    line-height: 40px;
+    margin-top: 20px;
+    width: 100%;
+    display: block;
+    text-align: center;
+
+    .errorMessage {
+      border: 1px solid #dc4e51;
+      color: #dc4e51;
+    }
+
+    .successMessage {
+      border: 1px solid #008A00;
+      color: #008A00;
+    }
+  }
+
+
+
+  .example-appear {
+    opacity: 0.01;
+    transition: opacity 0.5s ease-in;
+  }
+
+  .example-appear.example-appear-active {
+    opacity: 1;
+  }
+
+  .example-leave {
+    opacity: 1;
+  }
+
+  .example-leave.example-leave-active {
+    opacity: 0.01;
+    transition: opacity .5s ease-in;
+  }
 }
 
 @media only screen and (max-width: 480px) {
