--- a/public/client/css/compiled/shared.concat.css
+++ b/public/client/css/compiled/shared.concat.css
@@ -16,11 +16,65 @@
 
 /*# sourceMappingURL=bootstrapOverwrite.css.map */
 
+.countdown {
+  position: fixed;
+  bottom: 0;
+  right: 0;
+  z-index: 99; }
+  .countdown.sticky {
+    position: absolute;
+    top: -40px;
+    right: 0;
+    height: 40px; }
+  .countdown .timer {
+    background: #dc4e51;
+    padding: 0 12px;
+    height: 40px;
+    float: left; }
+    .countdown .timer p {
+      font-size: 16px;
+      color: #ffffff;
+      font-weight: 300;
+      line-height: 40px;
+      margin: 0; }
+      .countdown .timer p .count {
+        font-weight: 600;
+        font-size: 18px; }
+  .countdown .register {
+    display: block;
+    height: 40px;
+    background: #323232;
+    border: 1px solid #323232;
+    box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    float: right;
+    padding: 0 12px; }
+    .countdown .register a {
+      font-size: 16px;
+      font-weight: 400;
+      color: #ffffff;
+      line-height: 40px;
+      text-decoration: none;
+      margin: 0; }
+    .countdown .register:hover {
+      border: 1px solid #dc4e51;
+      background: #ffffff;
+      cursor: pointer;
+      transition: all 0.2s ease-in-out 0s;
+      -moz-transition: all 0.2s ease-in-out 0s;
+      -webkit-transition: all 0.2s ease-in-out 0s; }
+      .countdown .register:hover a {
+        color: #dc4e51; }
+
+/*# sourceMappingURL=countdown.css.map */
+
 .footer {
   width: 100%;
   height: 100px;
   background-color: #f0f0f0;
-  padding-top: 25px; }
+  padding-top: 25px;
+  position: relative; }
   .footer .leftSide {
     float: left;
     margin-left: 10px;
