--- a/source/scss/components/header.scss
+++ b/source/scss/components/header.scss
@@ -1,83 +1,30 @@
-.header-row{
-    position: fixed;
-    width: 100%;
-    top: 0;
-    left: 0;
-    background: #fff;
-    z-index: 999;
-    padding: 0 20px;
-    height: 70px;
-
-    .logo {
-      padding: 25px 25px;
-      background-image: url('../../images/logo.jpg');
-      background-size: cover;
-      width: 60px;
-      height: 60px;
-    }
-
-    nav{
-      padding-top: 5px;
-    }
-}
 .menu {
-  float: right;
+  position: fixed;
+  z-index: 999;
+  top: 0;
 
-  a {
-    font-size: 16px;
-    color: #323232;
-    font-weight: 300;
-    text-transform: uppercase;
-    padding: 5px 10px;
-    display: block;
-    position: relative;
+  .navbar {
+    border-top-left-radius: 0;
+    border-top-right-radius: 0;
+    border-bottom-left-radius: 4px;
+    border-bottom-right-radius: 4px;
+  }
+
+  .navbar-brand {
+    padding: 0;
+    height: auto;
+  }
+
+  .logo {
+    float: left;
+    background-image: url('../../images/logo.jpg');
+    background-size: cover;
+    width: 60px;
+    height: 60px;
   }
 
   li {
-    float: left;
-    display: block;
-    margin-left: 30px;
-    position: relative;
-  }
-
-  li a:hover{
-    background: #dc4e51;
-    color: #fff;
+    width: 100px;
   }
 }
 
-.home {
-  margin-top: 70px;
-  background-image:url('../../images/home_bg_top.jpg');
-  background-size: cover;
-  min-height: 350px;
-  color: #FFF;
-  background-repeat: no-repeat;
-  background-position: center center;
-
-  h2 {
-    text-align: center;
-    margin-top:130px;
-    font-weight: 700;
-    font-size: 55px;
-    padding-top: 50px;
-  }
-
-  h3 {
-    text-align: center;
-    font-weight: 700;
-    font-size: 35px;
-  }
-
-  p {
-    text-align: center;
-    margin-top: 30px;
-
-    .betssonHeader {
-      width: 120px;
-      height: 30px;
-      margin-left: 10px;
-      margin-top: -7px;
-    }
-  }
-}
